--- a/app-football/src/index.css
+++ b/app-football/src/index.css
@@ -209,8 +209,28 @@ p {
   border: 2px solid #ddd; /* Light border for better visibility */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a soft shadow */
   transition: transform 0.3s ease; /* Smooth zoom effect on hover */
-  
 }
 
-/* Hover effect for the stadium image */
+.no-favorite{
+  padding: 20%;
+}
 
+.favorite-list{
+  display: flex;
+  alignItems: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  justify-content: center;
+}
+
+.favorite-teams-container{
+  padding: 7%;
+}
+
+.home-container{
+  padding: 7%;
+}
+
+.remove-favorite-button{
+  margin-left: 40px;  
+}
